li > div 형태로 마크업수정 / single페이지로 링크연결

--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -100,36 +100,42 @@
             </div>
             <ul class="swiper-wrapper custom_wrap">
               <li class="swiper-slide">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
-                  <p class="heading_5">Eve Madien</p>
-                </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
-                  Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
-                </div>
-              </li>
-              <li class="swiper-slide">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
-                  <p class="heading_5">Ash Benfred</p>
-                </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                <div class="item">
+                  <div class="my_review">
+                    <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
+                    <p class="heading_5">Eve Madien</p>
+                  </div>
+                  <div class="heading_5 review_con">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
+                    Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
+                  </div>
                 </div>
               </li>
               <li class="swiper-slide">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
-                  <p class="heading_5">Ryan Smith</p>
+                <div class="item">
+                  <div class="my_review">
+                    <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
+                    <p class="heading_5">Ash Benfred</p>
+                  </div>
+                  <div class="heading_5 review_con">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                  </div>
                 </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
-                  Penatibus tortor consequat.
+              </li>
+              <li class="swiper-slide">
+                <div class="item">
+                  <div class="my_review">
+                    <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
+                    <p class="heading_5">Ryan Smith</p>
+                  </div>
+                  <div class="heading_5 review_con">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                    Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
+                    Penatibus tortor consequat.
+                  </div>
                 </div>
               </li>
             </ul>
