--- a/dev/page_dev/podcast.html
+++ b/dev/page_dev/podcast.html
@@ -4,7 +4,7 @@
 
 <!-- wrapper -->
 <div id="wrapper">
-  
+
   <!-- container -->
   <div class="container">
 
@@ -21,7 +21,7 @@
                   a dead black, and the stars had ceased to twinkle. By the same illusion which
                   lifts the horizon
                 </p>
-                <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+                <a href="single_podcast.html" class="btn_listen"><i class="play"></i>Listen Now</a>
               </div>
             </div>
           </div>
@@ -31,7 +31,6 @@
             <h2 class="heading_2">Recent Episodes</h2>
             <div class="type_01_sub">
               <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</p>
-              <a href="#none" class="btn_typ_01 btn_1 btn_recent">See All Episodes</a>
             </div>
           </div>
           <!-- @@include ../page_include/layout_list_typ_01.html -->
@@ -65,7 +64,7 @@
                     Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
                     volutpat ut netus malesuada enim penatibus non aliquet.
                   </p>
-                  <a href="#none" class="btn_typ_01 btn_3">Secondary</a>
+                  <a href="single_podcast.html" class="btn_typ_01 btn_3">Secondary</a>
                 </div>
               </div>
             </div>
