--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -372,38 +372,44 @@
         <div class="promo_only color_2">
           <h2 class="heading_1">about</h2>
         </div>
-        <div class="list_type custom_swiper con-m con_pd page_about"> <!-- page_about 빼기 -->
+        <div class="list_type con-m con_pd page_about"> <!-- page_about 빼기 -->
           <!-- typ_list_wrap -->
           <div class="typ_list_wrap">
             <ul class="custom_wrap">
               <li>
-                <div class="my_review">
-                  <img src="../assets/images/ico/ico_podcasts_p.png" alt="Eve Madien" class="ico_podcasts_img">
-                  <p class="heading_4">500+ Podcast</p>
-                </div>
-                <div class="heading_5 icon_desc">
-                  Apparently we had reached a great height in the atmosphere,
-                  for the sky was a dead black, and the stars had ceased to twinkle.
-                </div>
-              </li>
-              <li>
-                <div class="my_review">
-                  <img src="../assets/images/ico/ico_subscribers_p.png" alt="Ash Benfred" class="ico_subscribers_img">
-                  <p class="heading_4">24M Views</p>
-                </div>
-                <div class="heading_5 icon_desc">
-                  Apparently we had reached a great height in the atmosphere,
-                  for the sky was a dead black, and the stars had ceased to twinkle.
+                <div class="custom_item">
+                  <div class="my_review">
+                    <img src="../assets/images/ico/ico_podcasts_p.png" alt="Eve Madien" class="ico_podcasts_img">
+                    <p class="heading_4">500+ Podcast</p>
+                  </div>
+                  <div class="heading_5 icon_desc">
+                    Apparently we had reached a great height in the atmosphere,
+                    for the sky was a dead black, and the stars had ceased to twinkle.
+                  </div>
                 </div>
               </li>
               <li>
-                <div class="my_review">
-                  <img src="../assets/images/ico/ico_view_p.png" alt="Ryan Smith" class="ico_view_img">
-                  <p class="heading_4">600k Subs</p>
+                <div class="custom_item">
+                  <div class="my_review">
+                    <img src="../assets/images/ico/ico_subscribers_p.png" alt="Ash Benfred" class="ico_subscribers_img">
+                    <p class="heading_4">24M Views</p>
+                  </div>
+                  <div class="heading_5 icon_desc">
+                    Apparently we had reached a great height in the atmosphere,
+                    for the sky was a dead black, and the stars had ceased to twinkle.
+                  </div>
                 </div>
-                <div class="heading_5 icon_desc">
-                  Apparently we had reached a great height in the atmosphere,
-                  for the sky was a dead black, and the stars had ceased to twinkle.
+              </li>
+              <li>
+                <div class="custom_item">
+                  <div class="my_review">
+                    <img src="../assets/images/ico/ico_view_p.png" alt="Ryan Smith" class="ico_view_img">
+                    <p class="heading_4">600k Subs</p>
+                  </div>
+                  <div class="heading_5 icon_desc">
+                    Apparently we had reached a great height in the atmosphere,
+                    for the sky was a dead black, and the stars had ceased to twinkle.
+                  </div>
                 </div>
               </li>
             </ul>
