--- a/pages/about.html
+++ b/pages/about.html
@@ -18,7 +18,7 @@
 
   <!-- container -->
   <div class="container">
-    
+
       <!-- contents -->
       <div id="contents" class="page_about">
 
@@ -41,38 +41,44 @@
         <!-- banner_top -->
 
         <!-- info -->
-        <div class="list_type custom_swiper con-m con_pd">
+        <div class="list_type con-m con_pd">
           <!-- typ_list_wrap -->
           <div class="typ_list_wrap">
             <ul class="custom_wrap">
               <li>
-                <div class="my_review">
-                  <img src="../assets/images/ico/ico_podcasts_p.png" alt="Eve Madien" class="ico_podcasts_img">
-                  <p class="heading_4">500+ Podcast</p>
-                </div>
-                <div class="heading_5 icon_desc">
-                  Apparently we had reached a great height in the atmosphere,
-                  for the sky was a dead black, and the stars had ceased to twinkle.
-                </div>
-              </li>
-              <li>
-                <div class="my_review">
-                  <img src="../assets/images/ico/ico_subscribers_p.png" alt="Ash Benfred" class="ico_subscribers_img">
-                  <p class="heading_4">24M Views</p>
-                </div>
-                <div class="heading_5 icon_desc">
-                  Apparently we had reached a great height in the atmosphere,
-                  for the sky was a dead black, and the stars had ceased to twinkle.
+                <div class="custom_item">
+                  <div class="my_review">
+                    <img src="../assets/images/ico/ico_podcasts_p.png" alt="Eve Madien" class="ico_podcasts_img">
+                    <p class="heading_4">500+ Podcast</p>
+                  </div>
+                  <div class="heading_5 icon_desc">
+                    Apparently we had reached a great height in the atmosphere,
+                    for the sky was a dead black, and the stars had ceased to twinkle.
+                  </div>
                 </div>
               </li>
               <li>
-                <div class="my_review">
-                  <img src="../assets/images/ico/ico_view_p.png" alt="Ryan Smith" class="ico_view_img">
-                  <p class="heading_4">600k Subs</p>
+                <div class="custom_item">
+                  <div class="my_review">
+                    <img src="../assets/images/ico/ico_subscribers_p.png" alt="Ash Benfred" class="ico_subscribers_img">
+                    <p class="heading_4">24M Views</p>
+                  </div>
+                  <div class="heading_5 icon_desc">
+                    Apparently we had reached a great height in the atmosphere,
+                    for the sky was a dead black, and the stars had ceased to twinkle.
+                  </div>
                 </div>
-                <div class="heading_5 icon_desc">
-                  Apparently we had reached a great height in the atmosphere,
-                  for the sky was a dead black, and the stars had ceased to twinkle.
+              </li>
+              <li>
+                <div class="custom_item">
+                  <div class="my_review">
+                    <img src="../assets/images/ico/ico_view_p.png" alt="Ryan Smith" class="ico_view_img">
+                    <p class="heading_4">600k Subs</p>
+                  </div>
+                  <div class="heading_5 icon_desc">
+                    Apparently we had reached a great height in the atmosphere,
+                    for the sky was a dead black, and the stars had ceased to twinkle.
+                  </div>
                 </div>
               </li>
             </ul>
@@ -233,30 +239,42 @@
   <div class="typ_list_wrap">
     <ul>
       <li data-type="a">
-        <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
-        <div class="typ_sub_wrap">
-          <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
-          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
-          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
         </div>
       </li>
       <li data-type="b">
-        <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
-        <div class="typ_sub_wrap">
-          <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
-          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
-          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
         </div>
       </li>
       <li data-type="c">
-        <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
-        <div class="typ_sub_wrap">
-          <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
-          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
-          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
         </div>
       </li>
     </ul>
