--- a/pages/blog.html
+++ b/pages/blog.html
@@ -21,7 +21,7 @@
 
       <!-- contents -->
       <div id="contents" class="page_blog">
-        
+
         <!-- top_sec -->
         <div class="top_sec_wrap con_pd">
           <div class="top_img_wrap reverse">
@@ -34,7 +34,7 @@
               Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
               sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
             </p>
-            <a href="#none" class="btn_typ_02 btn_read">Read Now</a>
+            <a href="single_blog.html" class="btn_typ_02 btn_read">Read Now</a>
           </div>
         </div>
         <!-- //top_sec -->
@@ -56,7 +56,7 @@
                   <div class="typ_sub_wrap">
                     <h3 class="heading_3">How to build a world-class business brand</h3>
                     <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</p>
-                    <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
+                    <a href="single_blog.html" class="btn_typ_02 btn_listen">Read Now</a>
                   </div>
                 </div>
               </li>
@@ -68,7 +68,7 @@
                   <div class="typ_sub_wrap">
                     <h3 class="heading_3">Getting the first 100 customers for your business</h3>
                     <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</p>
-                    <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
+                    <a href="single_blog.html" class="btn_typ_02 btn_listen">Read Now</a>
                   </div>
                 </div>
               </li>
@@ -80,7 +80,7 @@
                   <div class="typ_sub_wrap">
                     <h3 class="heading_3">Should I raise money for my startup, or not?</h3>
                     <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor</p>
-                    <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
+                    <a href="single_blog.html" class="btn_typ_02 btn_listen">Read Now</a>
                   </div>
                 </div>
               </li>
