--- a/pages/podcast.html
+++ b/pages/podcast.html
@@ -15,7 +15,7 @@
 
 <!-- wrapper -->
 <div id="wrapper">
-  
+
   <!-- container -->
   <div class="container">
 
@@ -32,7 +32,7 @@
                   a dead black, and the stars had ceased to twinkle. By the same illusion which
                   lifts the horizon
                 </p>
-                <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+                <a href="single_podcast.html" class="btn_listen"><i class="play"></i>Listen Now</a>
               </div>
             </div>
           </div>
@@ -42,7 +42,6 @@
             <h2 class="heading_2">Recent Episodes</h2>
             <div class="type_01_sub">
               <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</p>
-              <a href="#none" class="btn_typ_01 btn_1 btn_recent">See All Episodes</a>
             </div>
           </div>
 <!-- list_typ_01 -->
@@ -51,30 +50,42 @@
   <div class="typ_list_wrap">
     <ul>
       <li data-type="a">
-        <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
-        <div class="typ_sub_wrap">
-          <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
-          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
-          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
         </div>
       </li>
       <li data-type="b">
-        <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
-        <div class="typ_sub_wrap">
-          <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
-          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
-          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
         </div>
       </li>
       <li data-type="c">
-        <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
-        <div class="typ_sub_wrap">
-          <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
-          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
-          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
         </div>
       </li>
     </ul>
@@ -103,30 +114,42 @@
   <div class="typ_list_wrap">
     <ul>
       <li data-type="a">
-        <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
-        <div class="typ_sub_wrap">
-          <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
-          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
-          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
         </div>
       </li>
       <li data-type="b">
-        <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
-        <div class="typ_sub_wrap">
-          <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
-          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
-          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
         </div>
       </li>
       <li data-type="c">
-        <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
-        <div class="typ_sub_wrap">
-          <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
-          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
-          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
         </div>
       </li>
     </ul>
@@ -148,7 +171,7 @@
                     Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
                     volutpat ut netus malesuada enim penatibus non aliquet.
                   </p>
-                  <a href="#none" class="btn_typ_01 btn_3">Secondary</a>
+                  <a href="single_podcast.html" class="btn_typ_01 btn_3">Secondary</a>
                 </div>
               </div>
             </div>
