--- a/pages/home.html
+++ b/pages/home.html
@@ -154,30 +154,42 @@
   <div class="typ_list_wrap">
     <ul>
       <li data-type="a">
-        <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
-        <div class="typ_sub_wrap">
-          <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
-          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
-          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
         </div>
       </li>
       <li data-type="b">
-        <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
-        <div class="typ_sub_wrap">
-          <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
-          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
-          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
         </div>
       </li>
       <li data-type="c">
-        <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
-        <div class="typ_sub_wrap">
-          <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
-          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
-          <a href="#none" class="mute"><i class="ico_mute"></i></a>
+        <div class="item">
+          <div class="iframe_wrap">
+            <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+          </div>
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
         </div>
       </li>
     </ul>
@@ -203,36 +215,42 @@
             </div>
             <ul class="swiper-wrapper custom_wrap">
               <li class="swiper-slide">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
-                  <p class="heading_5">Eve Madien</p>
-                </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
-                  Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
-                </div>
-              </li>
-              <li class="swiper-slide">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
-                  <p class="heading_5">Ash Benfred</p>
-                </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                <div class="item">
+                  <div class="my_review">
+                    <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
+                    <p class="heading_5">Eve Madien</p>
+                  </div>
+                  <div class="heading_5 review_con">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
+                    Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
+                  </div>
                 </div>
               </li>
               <li class="swiper-slide">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
-                  <p class="heading_5">Ryan Smith</p>
+                <div class="item">
+                  <div class="my_review">
+                    <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
+                    <p class="heading_5">Ash Benfred</p>
+                  </div>
+                  <div class="heading_5 review_con">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                  </div>
                 </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
-                  Penatibus tortor consequat.
+              </li>
+              <li class="swiper-slide">
+                <div class="item">
+                  <div class="my_review">
+                    <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
+                    <p class="heading_5">Ryan Smith</p>
+                  </div>
+                  <div class="heading_5 review_con">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                    Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
+                    Penatibus tortor consequat.
+                  </div>
                 </div>
               </li>
             </ul>
@@ -258,29 +276,35 @@
   <div class="typ_list_wrap">
     <ul>
       <li>
-        <a href="#none">
-          <img src="../assets/images/contents/bg_con_1.png" alt="articleNews_img" class="typ_list_img">
-        </a>
+        <div class="list_item">
+          <a href="#none">
+            <img src="../assets/images/contents/bg_con_1.png" alt="articleNews_img" class="typ_list_img">
+          </a>
+        </div>
       </li>
       <li>
-        <a href="#none">
-          <img src="../assets/images/contents/articles_1.png" alt="articleNews_img" class="typ_list_img">
+        <div class="list_item">
+          <a href="#none">
+            <img src="../assets/images/contents/articles_1.png" alt="articleNews_img" class="typ_list_img">
+          </a>
           <div class="typ_sub_wrap">
             <h3 class="heading_3">Getting the first 100 customers for your business</h3>
             <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-            <p class="btn_typ_02 btn_listen">Read Now</p>
+            <a href="#" class="btn_typ_02 btn_listen">Read Now</a>
           </div>
-        </a>
+        </div>
       </li>
       <li>
-        <a href="#none">
-        <img src="../assets/images/contents/articles_2.png" alt="articleNews_img" class="typ_list_img">
+        <div class="list_item">
+          <a href="#none">
+            <img src="../assets/images/contents/articles_2.png" alt="articleNews_img" class="typ_list_img">
+          </a>
           <div class="typ_sub_wrap">
             <h3 class="heading_3">Apparently we had reached a great height in the atmosphere, ...</h3>
             <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-            <p class="btn_typ_02 btn_listen">Read Now</p>
+            <a href="#" class="btn_typ_02 btn_listen">Read Now</a>
           </div>
-        </a>
+        </div>
       </li>
     </ul>
   </div>
