--- a/pages/single_blog.html
+++ b/pages/single_blog.html
@@ -110,29 +110,35 @@
   <div class="typ_list_wrap">
     <ul>
       <li>
-        <a href="#none">
-          <img src="../assets/images/contents/bg_con_1.png" alt="articleNews_img" class="typ_list_img">
-        </a>
+        <div class="list_item">
+          <a href="#none">
+            <img src="../assets/images/contents/bg_con_1.png" alt="articleNews_img" class="typ_list_img">
+          </a>
+        </div>
       </li>
       <li>
-        <a href="#none">
-          <img src="../assets/images/contents/articles_1.png" alt="articleNews_img" class="typ_list_img">
+        <div class="list_item">
+          <a href="#none">
+            <img src="../assets/images/contents/articles_1.png" alt="articleNews_img" class="typ_list_img">
+          </a>
           <div class="typ_sub_wrap">
             <h3 class="heading_3">Getting the first 100 customers for your business</h3>
             <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-            <p class="btn_typ_02 btn_listen">Read Now</p>
+            <a href="#" class="btn_typ_02 btn_listen">Read Now</a>
           </div>
-        </a>
+        </div>
       </li>
       <li>
-        <a href="#none">
-        <img src="../assets/images/contents/articles_2.png" alt="articleNews_img" class="typ_list_img">
+        <div class="list_item">
+          <a href="#none">
+            <img src="../assets/images/contents/articles_2.png" alt="articleNews_img" class="typ_list_img">
+          </a>
           <div class="typ_sub_wrap">
             <h3 class="heading_3">Apparently we had reached a great height in the atmosphere, ...</h3>
             <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-            <p class="btn_typ_02 btn_listen">Read Now</p>
+            <a href="#" class="btn_typ_02 btn_listen">Read Now</a>
           </div>
-        </a>
+        </div>
       </li>
     </ul>
   </div>
