li > div 등 수정사항 반영

--- a/dev/page_dev/about.html
+++ b/dev/page_dev/about.html
@@ -108,9 +108,9 @@
                     <span class="job">Founder & CEO</span>
                     <div class="socials">
                       <ul class="socials_list">
-                        <li><a href="#none" class="ico_facebook_p"></a></li>
-                        <li><a href="#none" class="ico_twitter_p"></a></li>
-                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                        <li><a href="#none" class="ico_facebook_p"><span class="blind">go to facebook</span></a></li>
+                        <li><a href="#none" class="ico_twitter_p"><span class="blind">go to twitter</span></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"><span class="blind">go to linkedIn</span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -122,9 +122,9 @@
                     <span class="job">Cofounder</span>
                     <div class="socials">
                       <ul class="socials_list">
-                        <li><a href="#none" class="ico_facebook_p"></a></li>
-                        <li><a href="#none" class="ico_twitter_p"></a></li>
-                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                        <li><a href="#none" class="ico_facebook_p"><span class="blind">go to facebook</span></a></li>
+                        <li><a href="#none" class="ico_twitter_p"><span class="blind">go to twitter</span></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"><span class="blind">go to linkedIn</span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -136,9 +136,9 @@
                     <span class="job">Producer</span>
                     <div class="socials">
                       <ul class="socials_list">
-                        <li><a href="#none" class="ico_facebook_p"></a></li>
-                        <li><a href="#none" class="ico_twitter_p"></a></li>
-                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                        <li><a href="#none" class="ico_facebook_p"><span class="blind">go to facebook</span></a></li>
+                        <li><a href="#none" class="ico_twitter_p"><span class="blind">go to twitter</span></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"><span class="blind">go to linkedIn</span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -150,9 +150,9 @@
                     <span class="job">Editor</span>
                     <div class="socials">
                       <ul class="socials_list">
-                        <li><a href="#none" class="ico_facebook_p"></a></li>
-                        <li><a href="#none" class="ico_twitter_p"></a></li>
-                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                        <li><a href="#none" class="ico_facebook_p"><span class="blind">go to facebook</span></a></li>
+                        <li><a href="#none" class="ico_twitter_p"><span class="blind">go to twitter</span></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"><span class="blind">go to linkedIn</span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -164,9 +164,9 @@
                     <span class="job">Founder & CEO</span>
                     <div class="socials">
                       <ul class="socials_list">
-                        <li><a href="#none" class="ico_facebook_p"></a></li>
-                        <li><a href="#none" class="ico_twitter_p"></a></li>
-                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                        <li><a href="#none" class="ico_facebook_p"><span class="blind">go to facebook</span></a></li>
+                        <li><a href="#none" class="ico_twitter_p"><span class="blind">go to twitter</span></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"><span class="blind">go to linkedIn</span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -178,9 +178,9 @@
                     <span class="job">Cofounder</span>
                     <div class="socials">
                       <ul class="socials_list">
-                        <li><a href="#none" class="ico_facebook_p"></a></li>
-                        <li><a href="#none" class="ico_twitter_p"></a></li>
-                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                        <li><a href="#none" class="ico_facebook_p"><span class="blind">go to facebook</span></a></li>
+                        <li><a href="#none" class="ico_twitter_p"><span class="blind">go to twitter</span></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"><span class="blind">go to linkedIn</span></a></li>
                       </ul>
                     </div>
                   </div>
