--- a/pages/about.html
+++ b/pages/about.html
@@ -119,9 +119,9 @@
                     <span class="job">Founder & CEO</span>
                     <div class="socials">
                       <ul class="socials_list">
-                        <li><a href="#none" class="ico_facebook_p"></a></li>
-                        <li><a href="#none" class="ico_twitter_p"></a></li>
-                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                        <li><a href="#none" class="ico_facebook_p"><span class="blind">go to facebook</span></a></li>
+                        <li><a href="#none" class="ico_twitter_p"><span class="blind">go to twitter</span></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"><span class="blind">go to linkedIn</span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -133,9 +133,9 @@
                     <span class="job">Cofounder</span>
                     <div class="socials">
                       <ul class="socials_list">
-                        <li><a href="#none" class="ico_facebook_p"></a></li>
-                        <li><a href="#none" class="ico_twitter_p"></a></li>
-                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                        <li><a href="#none" class="ico_facebook_p"><span class="blind">go to facebook</span></a></li>
+                        <li><a href="#none" class="ico_twitter_p"><span class="blind">go to twitter</span></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"><span class="blind">go to linkedIn</span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -147,9 +147,9 @@
                     <span class="job">Producer</span>
                     <div class="socials">
                       <ul class="socials_list">
-                        <li><a href="#none" class="ico_facebook_p"></a></li>
-                        <li><a href="#none" class="ico_twitter_p"></a></li>
-                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                        <li><a href="#none" class="ico_facebook_p"><span class="blind">go to facebook</span></a></li>
+                        <li><a href="#none" class="ico_twitter_p"><span class="blind">go to twitter</span></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"><span class="blind">go to linkedIn</span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -161,9 +161,9 @@
                     <span class="job">Editor</span>
                     <div class="socials">
                       <ul class="socials_list">
-                        <li><a href="#none" class="ico_facebook_p"></a></li>
-                        <li><a href="#none" class="ico_twitter_p"></a></li>
-                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                        <li><a href="#none" class="ico_facebook_p"><span class="blind">go to facebook</span></a></li>
+                        <li><a href="#none" class="ico_twitter_p"><span class="blind">go to twitter</span></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"><span class="blind">go to linkedIn</span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -175,9 +175,9 @@
                     <span class="job">Founder & CEO</span>
                     <div class="socials">
                       <ul class="socials_list">
-                        <li><a href="#none" class="ico_facebook_p"></a></li>
-                        <li><a href="#none" class="ico_twitter_p"></a></li>
-                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                        <li><a href="#none" class="ico_facebook_p"><span class="blind">go to facebook</span></a></li>
+                        <li><a href="#none" class="ico_twitter_p"><span class="blind">go to twitter</span></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"><span class="blind">go to linkedIn</span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -189,9 +189,9 @@
                     <span class="job">Cofounder</span>
                     <div class="socials">
                       <ul class="socials_list">
-                        <li><a href="#none" class="ico_facebook_p"></a></li>
-                        <li><a href="#none" class="ico_twitter_p"></a></li>
-                        <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                        <li><a href="#none" class="ico_facebook_p"><span class="blind">go to facebook</span></a></li>
+                        <li><a href="#none" class="ico_twitter_p"><span class="blind">go to twitter</span></a></li>
+                        <li><a href="#none" class="ico_linkedIn_p"><span class="blind">go to linkedIn</span></a></li>
                       </ul>
                     </div>
                   </div>
