--- a/dev/page_dev/single_podcast.html
+++ b/dev/page_dev/single_podcast.html
@@ -112,17 +112,26 @@
             <!-- podcasts -->
             <ul class="podcasts_list">
               <li>
-                <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts"></a>
+                <div class="podcasts_item">
+                  <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts"></a>
+                </div>
               </li>
               <li>
-                <a href="#none" class="logo_sound_cloud"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
+                <div class="podcasts_item">
+                  <a href="#none" class="logo_sound_cloud"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
+                </div>
+
               </li>
               <li>
-                <a href="#none" class="google_logo"><img src="../assets/images/logo/google_podcast.png" alt="googl _podcast"></a>
+                <div class="podcasts_item">
+                  <a href="#none" class="google_logo"><img src="../assets/images/logo/google_podcast.png" alt="googl _podcast"></a>
+                </div>
               </li>
               <li>
-                <a href="#none" class="spotify_logo"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
-              </li>
+                <div class="podcasts_item">
+                  <a href="#none" class="spotify_logo"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
+                </div>
+                </li>
             </ul>
             <!-- //podcasts -->
           </div>
