--- a/dev/page_include/list_type_01_tit.html
+++ b/dev/page_include/list_type_01_tit.html
@@ -1,7 +1,7 @@
 <div class="typ_tit_wrap con_pd">
   <h2 class="heading_2">Recent Episodes</h2>
   <div class="type_01_sub">
-    <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
+    <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</p>
     <a href="#none" class="btn_typ_01 btn_1 btn_recent">See All Episodes</a>
   </div>
   <div class="category_podcasts">
