--- a/pages/contact.html
+++ b/pages/contact.html
@@ -52,17 +52,26 @@
                 <!-- podcasts -->
                 <ul class="podcasts_list">
                   <li>
-                    <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts"></a>
+                    <div class="podcasts_item">
+                      <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts"></a>
+                    </div>
                   </li>
                   <li>
-                    <a href="#none" class="logo_sound_cloud"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
+                    <div class="podcasts_item">
+                      <a href="#none" class="logo_sound_cloud"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
+                    </div>
+  
                   </li>
                   <li>
-                    <a href="#none" class="google_logo"><img src="../assets/images/logo/google_podcast.png" alt="googl _podcast"></a>
+                    <div class="podcasts_item">
+                      <a href="#none" class="google_logo"><img src="../assets/images/logo/google_podcast.png" alt="googl _podcast"></a>
+                    </div>
                   </li>
                   <li>
-                    <a href="#none" class="spotify_logo"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
-                  </li>
+                    <div class="podcasts_item">
+                      <a href="#none" class="spotify_logo"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
+                    </div>
+                    </li>
                 </ul>
                 <!-- //podcasts -->
               </div>
@@ -70,9 +79,9 @@
               <div class="socials">
                 <h3>Socials</h3>
                 <ul class="socials_list">
-                  <li><a href="#none" class="ico_facebook_p"></a></li>
-                  <li><a href="#none" class="ico_twitter_p"></a></li>
-                  <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                  <li><a href="#none" class="ico_facebook_p"><span class="blind">go to facebook</span></a></li>
+                  <li><a href="#none" class="ico_twitter_p"><span class="blind">go to twitter</span></a></li>
+                  <li><a href="#none" class="ico_linkedIn_p"><span class="blind">go to linkdIn</span></a></li>
                 </ul>
               </div>
 
